--- a/creations/commencement/index.html
+++ b/creations/commencement/index.html
@@ -40,7 +40,7 @@
     <!-- Home-creation Section -->
     <section id="home-creation" class="home-creation">
         <div class="container-xl">
-            <div class="row">
+            <div class="row d-flex flex-column flex-grow-1">
                 <div class="col-10 mx-auto">
                     <div class="jumbotron commencement jumbotron-fluid">
                         <div class="row">
