--- a/creations/cromwell/index.html
+++ b/creations/cromwell/index.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-10 mx-auto">
                     <div class="retour-creations">
-                        <p><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover " href="./../../index.html#creations"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;Retour aux créations</a></p>
+                        <p><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover link-creation" href="./../../index.html#creations"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;Retour aux créations</a></p>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
     <!-- Home-creation Section -->
     <section id="home-creation" class="home-creation">
         <div class="container-xl">
-            <div class="row">
+            <div class="row d-flex flex-column flex-grow-1">
                 <div class="col-10 mx-auto">
                     <div class="jumbotron cromwell jumbotron-fluid">
                         <div class="row">
@@ -76,7 +76,15 @@
                                         <img src="media/images/cromwell-banniere.jpeg" alt="baniere cromwell" class="img-fluid">
                                     </picture>
                                 </div></p>
-                                <p>Pour monter ce projet nous serons six metteur.e.s en scène (Mélanie Vayssettes et Simon Le Floc'h (le club dramatique), Nathan Croquet (Théâtre du Rocher), Maëva Meunier (La Particule), Victor Ginicis (Avant L'Incendie) et Théodore Oliver (MégaSuperThéâtre)), invité.e.s par Alice Tabart à venir monter chacun.e un acte de ce monstre dont elle assure la coordination et la dramaturgie générale.</p>
+                                <p>Pour monter ce projet nous serons six metteur.e.s en scène</p>
+                                    <ul class="liste-p">
+                                       <li>Mélanie Vayssettes et Simon Le Floc'h - <i>le club dramatique</i>,</li>
+                                       <li>Nathan Croquet - <i>Théâtre du Rocher</i>,</li>
+                                       <li>Maëva Meunier - <i>La Particule</i>,</li>
+                                       <li>Victor Ginicis - <i>Avant L'Incendie</i> et</li>
+                                       <li>Théodore Oliver - <i>MégaSuperThéâtre</i></li>
+                                    </ul>
+                                <p>invité.e.s par Alice Tabart à venir monter chacun.e un acte de ce monstre dont elle assure la coordination et la dramaturgie générale.</p>
                                 <p class="text-end"><i><b>Durée 6h</b><br>
                                         (entractes et repas inclus)</i></p>
                             </div>
@@ -238,7 +246,7 @@
         </div>
         <div class="adresse-internet">
             <p class="text-center">
-                <a href="https://mesdames-a.fr">www.mesdames-a.fr</a>
+                <a class="link-creation" href="https://mesdames-a.fr">www.mesdames-a.fr</a>
             </p>
         </div>
     </footer>
