--- a/creations/eclairs/index.html
+++ b/creations/eclairs/index.html
@@ -71,7 +71,7 @@
     <!-- Creation Section -->
     <section id="home-creation" class="home-creation">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row d-flex flex-column flex-grow-1">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <!--Voyages dans le temps-->
                     <div class="creations voyages" id="voyages">
