--- a/creations/eclairs/index.html
+++ b/creations/eclairs/index.html
@@ -41,7 +41,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
-                    <p><a class="back-to-creations" href="./../../index.html#creations">Retour aux créations</a></p>
+                    <p><a class="back-to-creations link-creation"" href="./../../index.html#creations">Retour aux créations</a></p>
                 </div>
             </div>
         </div>
@@ -257,7 +257,7 @@
                     </div>
                     <div class="adresse-internet">
                         <p class="text-center contact-section">
-                            <a href="http://mesdames-a.fr">www.mesdames-a.fr</a>
+                            <a class="link-creation" href="http://mesdames-a.fr">www.mesdames-a.fr</a>
                         </p>
                     </div>
                     <br>
