--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-sm-10 offset-sm-1">
                     <div class="row">
                         <div class="col-md-9 col-xl-7 offset-xl-2">
-                            <p class="intro-text text-center">En 23/24, la compagnie, poursuit la diffusion du <a href="creations/commencement/index.html"><i>Commencement</i></a> et se lance dans un projet-fleuve&nbsp;: monter pour la première fois <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.</p><br>
+                            <p class="intro-text text-center">En 23/24, la compagnie, poursuit la diffusion du <a class="link-creation" href="creations/commencement/index.html"><i>Commencement</i></a> et se lance dans un projet-fleuve&nbsp;: monter pour la première fois <a href="creations/cromwell/index.html" class="link-creation"><i>CROMWELL</i></a> de Victor Hugo.</p><br>
                             <!-- <p>Prochaines dates</p> -->
                             <ul class="text-white ">
                                 <li class=""><i>Le Commencement</i> le 18 mai à Montans (81)</li>
@@ -953,7 +953,7 @@
         </div>
         <div class="adresse-internet">
             <p class="text-center">
-                <a href="https://mesdames-a.fr">www.mesdames-a.fr</a>
+                <a class="link-creation" href="https://mesdames-a.fr">www.mesdames-a.fr</a>
             </p>
         </div>
     </footer>
