--- a/creations/commencement/index.html
+++ b/creations/commencement/index.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-10 mx-auto">
                     <div class="retour-creations">
-                        <p><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover " href="./../../index.html#creations"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;Retour aux créations</a></p>
+                        <p><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-100-hover link-creation" href="./../../index.html#creations"><i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp;Retour aux créations</a></p>
                     </div>
                 </div>
             </div>
