--- a/creations/monologue/index.html
+++ b/creations/monologue/index.html
@@ -39,7 +39,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
-                    <p><a class="back-to-creations" href="./../../index.html#creations">Retour aux créations</a></p>
+                    <p><a class="back-to-creations  link-creation" href="./../../index.html#creations">Retour aux créations</a></p>
                 </div>
             </div>
         </div>
@@ -209,7 +209,7 @@
                         </div>
                         <div class="adresse-internet">
                             <p class="text-center">
-                                <a href="http://mesdames-a.fr">www.mesdames-a.fr</a>
+                                <a class="link-creation" href="http://mesdames-a.fr">www.mesdames-a.fr</a>
                             </p>
                         </div>
                     </div>
