updates cards add erplj stranded

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Alice et Gilles Tabart">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="mesdames a, théâtre, culture, Toulouse, Alice Tabart, Tabart, compagnie de théâtre, spectacle, musique, chant, danse, compagnie, troupe, art, théâtre contemporain, vivant, pièce, theatre, play, act, stage, actor, troup, on tour, mesdames-a, mesdames, sorties, Midi-Pyrénées">
-    <title>Compagnie Mesdames A - Théâtre contemporain Toulouse</title>
+    <title>Compagnie Mesdames A || Théâtre | Spectacles vivants || Toulouse</title>
     <meta name="google-site-verification" content="5KhJKZQOuIzVJuw2kGENQR5YWA-Hu2F0FrGr0b3JeNg" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
@@ -400,25 +400,8 @@
                         <div class="col g-5"></div>
                     </div>
                     <div class="deck-of-cards-creations">
-                        <div class="row row-cols-1 g-4 mb-4">
-                            <!-- <div class="col"> 
-                             
-                                <div class="card h-100 card-commencement border-secondary bg-transparent text-white mb-3">
-                                    <img class="card-img-top" src="creations/commencement/media/images/05-commencement-md-coline-slide-dsc-9666.jpg" alt="eclairs-jeu">
-                                    <div class="card-img-overlay d-flex flex-column">
-                                        <h4 class="card-title titre-creations-cards"><i>Le Commencement</i></h4>
-                                        <h6 class="card-subtitle mb-2"><small><i>2022/23 et 23/24</i></small></h6>
-                                    </div>
-                                    <div class="card-body">
-                                        <p class="card-text">Un groupe d'humain.e.s du futur rescapés dans l'espace et ayant perdu tout souvenir de leur passé préparent leur atterrissage sur Terre...
-                                            <br>
-                                            <a href="creations/commencement/index.html" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a></p>
-                                    </div>
-
-                                </div>
-                                </div>
-                            </div> -->
-                            <!-- <div class="row row-cols-1 row-cols-md-2 g-4"> -->
+                        <!-- <div class="row row-cols-1 g-4 mb-4"> -->
+                        <div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
                             <div class="col">
                                 <!-- cromwell -->
                                 <div class="card h-100 card-commencement border-secondary bg-transparent text-white mb-3">
@@ -431,12 +414,6 @@
                                         <p class="card-text">Pièce-fleuve révolutionnaire de Victor Hugo alternant scènes intimes, bouffonneries, cour, chansons, intrigues politiques et d'espionnage...<br>
                                             <a href="creations/cromwell/index.html" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right arrow-hide"></i></a></p>
                                     </div>
-                                    <!--        <div class="card-body">
-                                        <p class="card-text">Un groupe d'humain.e.s du futur rescapés dans l'espace et ayant perdu tout souvenir de leur passé préparent leur atterrissage sur Terre...</p>
-                                    </div> -->
-                                    <!-- <div class="card-footer bg-transparent">
-                                        <a class="link-creation" href="#eclairs">Voir plus</a>
-                                    </div> -->
                                 </div>
                             </div>
                             <div class="col">
@@ -461,7 +438,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row row-cols-1 row-cols-md-2 g-4">
+                        <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-3 g-4">
                             <div class="col">
                                 <!-- eclairs -->
                                 <div class="card h-100 card-eclairs border-secondary bg-transparent text-white mb-3">
@@ -472,7 +449,7 @@
                                     </div>
                                     <div class="card-body">
                                         <p class="card-text"><small><i>théâtre-concert-danse</i></small><br>
-                                            Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père...<br>
+                                            Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père.<br>
                                             <!-- <a href="#eclairs" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a> -->
                                         </p>
                                     </div>
@@ -501,7 +478,7 @@
                                         <h6 class="card-subtitle mb-2"><small><i>Étés 2015 à 2018</i></small></h6>
                                     </div>
                                     <div class="card-body">
-                                        <p class="card-text">Marionnettes géantes, cirque, chants et danses ; cette expérience théâtrale part à la recherche de dragons endormis dans la cité de Sévérac-le-Château.<br>
+                                        <p class="card-text">Marionnettes géantes, cirque, chants et danses ; cette expérience théâtrale part à la recherche de dragons endormis dans la cité de Sévérac-le-Château...<br>
                                             <a href="creations/dragons/index.html" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a> </p>
                                     </div>
                                 </div>
@@ -515,7 +492,7 @@
                                         <h6 class="card-subtitle mb-2"><small><i>2012/13 et 13/14</i></small></h6>
                                     </div>
                                     <div class="card-body">
-                                        <p class="card-text">Poème de Victor Hugo, il nous entraîne aux côtés d'une créature marginale et monstrueusement subversive dans un face à face avec les Dieux de l'Olympe.<br>
+                                        <p class="card-text">Poème de Victor Hugo, il nous entraîne aux côtés d'une créature marginale et monstrueusement subversive dans un face à face avec les Dieux de l'Olympe...<br>
                                             <a href="creations/satyre/index.html" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a> </p>
                                     </div>
                                 </div>
@@ -529,8 +506,44 @@
                                         <h6 class="card-subtitle mb-2"><small><i>2010/11</i></small></h6>
                                     </div>
                                     <div class="card-body">
-                                        <p class="card-text">Féminine, la figure criminelle surpend. Son ombre l'assiste dans ses aveux et à dévoiler son rapport au monde : tantôt froid, tantôt farceur, toujours déroutant.<br>
+                                        <p class="card-text">Féminine, la figure criminelle surpend. Son ombre l'assiste dans ses aveux et à dévoiler son rapport au monde : tantôt froid, tantôt farceur, toujours déroutant...<br>
                                             <a href="creations/monologue/index.html" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a> </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <!--ERPLJ-->
+                                <div class="card h-100 card-erplj border-secondary bg-transparent text-white mb-3">
+                                    <picture>
+                                        <source type="image/webp" srcset="creations/ERPLJ/media/images/mesdames-a-erplj-cover.webp" />
+                                        <img class="card-img-top" src="creations/ERPLJ/media/images/mesdames-a-erplj-cover.jpeg" alt="ERPLJ drapeau" loading="lazy" />
+                                    </picture>
+                                    <div class="card-img-overlay d-flex flex-column">
+                                        <h4 class="card-title titre-creations-cards"><i>En Route pour la joie</i></h4>
+                                        <h6 class="card-subtitle mb-2"><small><i>2009/10</i></small></h6>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Le temps s'égraine au fil de six dates, six drames intimes ou nationaux, tous liés, comme autant de traits permettant une esquisse de l'humain contemporain.<br>
+                                            <!-- <a href="creations/ERPLJ/index.html" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a> -->
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <!--stranded-->
+                                <div class="card h-100 card-erplj border-secondary bg-transparent text-white mb-3">
+                                    <picture>
+                                        <source type="image/webp" srcset="creations/stranded/media/images/strandedyet-fly-recto.webp" />
+                                        <img class="card-img-top" src="creations/stranded/media/images/strandedyet-fly-recto.jpeg" alt="stranded drapeau" loading="lazy" />
+                                    </picture>
+                                    <div class="card-img-overlay d-flex flex-column">
+                                        <h4 class="card-title titre-creations-cards"><i>Stranded Yet</i></h4>
+                                        <h6 class="card-subtitle mb-2"><small><i>2008/09</i></small></h6>
+                                    </div>
+                                    <div class="card-body">
+                                        <p class="card-text">Quelle importance ont les choix personnels dans l'histoire collective ? Quel statut ont les figures humaines qui y participent...<br>Créé au sein du Collectif Cocktail<br>
+                                            <!-- <a href="creations/ERPLJ/index.html" class="link-creation stretched-link">Voir plus&nbsp;&nbsp;<i class="fa-solid fa-circle-right"></i></a> -->
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -548,8 +561,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--ERPLJ-->
-                            <!-- stranded -->
                         </div>
                     </div>
                 </div>
@@ -563,17 +574,20 @@
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>La Compagnie</h1>
                     <div class="row">
-                        <div class="col-sm-8">
-                            <p>Elle est née en 2010 de l'envie d'une dizaine de jeunes artistes toulousain.e.s.<br>Leur objectif dès le départ se situait à la rencontre entre la création contemporaine (théâtre, musique, danse) et la recherche, ainsi que dans une perspective résolue de diffusion pour le plus grand nombre à la fois en lieux de théâtre repérés et en milieux éloignés de l'offre culturelle.<br>
+                        <div class="col-sm-8 col-xxl-6">
+                            <p>Elle est née en 2010 de l'envie d'une dizaine de jeunes artistes toulousain.e.s.<br>Leur objectif dès le départ se situait à la rencontre entre la création contemporaine (théâtre, musique, danse) et la recherche, ainsi que dans une perspective résolue de diffusion pour le plus grand nombre à la fois en lieux de théâtre repérés et en milieux éloignés de l'offre culturelle.</p>
+                        </div>
+                            <div class="col-sm-4 col-xxl-6">
+                                <!-- <img id="logo" src="media/images/LogoCompagnieMaDark.svg"> -->
+                                <img id="logo" src="media/images/LogoCompagnieMa.svg">
+                            </div>
+                            <div class="col-sm-8 col-xxl-6">
+                            <p>
                                 Des créations inter-disciplinaires brassées par nos enjeux contemporains inscrites dans un vrai parcours de démocratisation culturelle.<br>
                                 Cette double philosophie nous a conduit sur les routes de l'Occitanie (et au-delà) avec des projets qui, sous la houlette d'Alice Tabart, dessinent une dramaturgie de l'histoire, à destination d'un réel tout public.
                             </p>
                             <!--  <p>La Compagnie de théâtre Mesdames A est née à Toulouse en juin 2009. Elle souhaite un théâtre exigeant, mais abordable et populaire. Pour cela, elle le fait aller à la rencontre de publics diversifiés.<br>
                             La plupart de nos spectacles sont basés sur une écriture originale. Ils invitent à la réflexion tout en restant ludiques. Ils mêlent jeu, danse, musique et chant et offrent des mises en scène et une utilisation de l'espace visuel surprenantes. </p> -->
-                        </div>
-                        <div class="col-sm-4">
-                            <!-- <img id="logo" src="media/images/LogoCompagnieMaDark.svg"> -->
-                            <img id="logo" src="media/images/LogoCompagnieMa.svg">
                         </div>
                     </div>
                     <h2>L'équipe</h2>
@@ -581,9 +595,9 @@
                         Comme toute compagnie, Mesdames A vit au rythme des projets et son équipe se modifie selon les besoins de la création en cours.
 
                     </p> -->
-                    <div class="row">
+                    <div class="row row-cols-2 row-cols-md-3 row-cols-xl-4 row-cols-xxl-5 g-4">
                         <!--ALICE-->
-                        <div class="col-6 col-md-4 col-xl-3">
+                        <div class="col">
                             <div class="position-relative">
                                 <div class="circle-avatar" style="background-image:url(media/images/alice-square2.jpg)">
                                 </div>
@@ -630,7 +644,7 @@
                             </div>
                         </div>
                         <!--COLINE-->
-                        <div class="col-6 col-md-4 col-xl-3">
+                        <div class="col">
                             <div class="position-relative">
                                 <div class="circle-avatar" style="background-image:url(media/images/coline-square-2018.jpg)">
                                 </div>
@@ -693,13 +707,13 @@
                                 </div>
                             </div>
                         </div> -->
-                        <div class="col-6 col-md-4 col-xl-3">
+                        <div class="col">
                             <div class="circle-avatar" style="background-image:url(media/images/lea-square.jpg)">
                             </div>
                             <p class="text-center"><strong>Léa Cuny-Bret</strong></p>
                             <p class="text-center">Chargée de production/diffusion</p>
                         </div>
-                        <div class="col-6 col-md-4 col-xl-3">
+                        <div class="col">
                             <div class="circle-avatar" style="background-image:url(media/images/mathilde-square.jpeg)">
                             </div>
                             <p class="text-center"><strong>Mathilde Ratajczyk</strong></p>
@@ -739,12 +753,12 @@
                         </div>
                     </div> -->
                         <!-- <div class="clearfix d-block"></div> -->
-                        <div class="col-6 col-md-4 col-xl-3">
+                        <div class="col">
                             <div class="position-relative">
                                 <div class="circle-avatar" style="background-image:url(media/images/autres-square.jpg)">
                                 </div>
                                 <p class="text-center">
-                                    <a data-bs-toggle="modal" href="#modal-autres" class="link-creation stretched-link"><strong>L'équipe au fil du temps</strong></a>
+                                    <a data-bs-toggle="modal" href="#modal-autres" class="link-creation stretched-link"><strong>Au fil du temps</strong></a>
                                 </p>
                             </div>
                             <p class="text-center">Collaborations passées</p>
